<resources>
    <string name="app_name">ProGallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- -->
    <string name="photo_tab">Photos</string>
    <string name="album_tab">Albums</string>
    <string name="highlight_tab">Highlights</string>

    <string name="photo_string">This is photo tab</string>
    <string name="album_string">This is album tab</string>
    <string name="highlight_string">This is highlight tab</string>

    <string name="photo_desc">Placeholder photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_video_name">This is Photo/Video Name</string>
    <string name="loading_video">Loading Video</string>
    <string name="settings">Settings</string>
    <string name="image_video_details">This is media/video details</string>
    <string name="camera">This is a camera</string>
    <string name="brush_size">Brush Size</string>
    <string name="opacity">Opacity</string>
    <string name="brush_state_eraser">Eraser</string>
    <string name="brush_state_paint">Brush</string>
    <string name="brush_btn">Brush</string>
    <string name="btn_emoji">Emoji</string>
    <string name="text_for_image">Text</string>
    <string name="enter_some_text">Enter some text</string>
    <string name="text_font">Text Font</string>
    <string name="font_arial">Arial</string>
    <string name="crop_image">Crop</string>
    <string name="media_capture">Media Capture</string>
    <string name="view_type">View Type…</string>
    <string name="show_dates">Show Dates</string>
    <string name="hide_dates">Hide Dates</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="flex">Flex</string>
    <string name="this_is_place_holder_text">This is place holder text</string>
    <string name="sample_date">Sample date</string>
    <string name="delete">Delete</string>
    <string name="slideshow">Slideshow</string>
    <string name="add_to_album">Add to album</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="move_to_vault">Move to Vault</string>
    <string name="information">Information</string>
    <string name="camera_capture">Camera</string>
    <string name="camera_video">Video</string>
    <string name="add_album">Add album</string>
    <string name="name_required">Name (Required)</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="image_source">Path</string>
    <string name="image_length">Length</string>
    <string name="image_width">Width</string>
    <string name="image_height">Height</string>
    <string name="datetime">Datetime</string>
    <string name="orientation">Orientation</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="file_size">File Size</string>
    <string name="img_title">Title</string>
    <string name="are_you_sure_to_delete_this_media">Are you sure to delete this media?</string>
    <string name="copy_to_album">Copy to album</string>
    <string name="move_to_album">Move to album</string>
    <string name="rename_album">Rename album</string>
    <string name="delete_album">Delete album</string>
    <string name="favorite">Favorite</string>
    <string name="vault">Vault</string>
    <string name="set_as_lock_screen">Set as Lock Screen</string>
    <string name="set_as_home_screen">Set as home screen</string>
    <string name="title_activity_settings">@string/settings</string>
    <string name="choose_an_album">Choose an album</string>
    <string name="set_location">Set location</string>
    <string name="duration">Duration</string>
    <string name="verify_pin">Verify PIN</string>
    <string name="set_pin">Set PIN</string>
    <string name="set_pin_passcode">Set PIN passcode</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="re_enter_pin">Re-enter PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="change_pin">Change PIN</string>   
    <string name="change_pin_passcode">Change PIN passcode</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="enter_old_pin">Enter old PIN</string>
    <string name="remove_from_vault">Remove from Vault</string>
    <string name="moved_to_vault">Moved to vault</string>
    <string name="moved_to_album">Moved to album</string>
    <string name="failed_to_move_to_vault">Failed to move to vault</string>
    <string name="failed_to_remove_from_vault">Failed to remove from vault</string>
    <string name="failed_to_move">Failed to move to media</string>
    <string name="copied_to_album">Copied to album</string>
    <string name="failed_to_copy">Failed to copy to media</string>
    <string name="share_error">Share error</string>
    <string name="set_location_failed">Set location failed</string>
    <string name="set_location_success">Set location successfully</string>
    <string name="unfavorited">Unfavorited</string>
    <string name="favorited">Favorited</string>
    <string name="error_fetching_data">Error in fetching data</string>
    <string name="wrong_password">Wrong password</string>
    <string name="passcode_changed">Passcode Changed</string>
    <string name="unmatched_pin">Unmatched PIN</string>
    <string name="failed_change_password">Failed to change password</string>
    <string name="old_passcode_unmatched">Old Passcode Unmatched</string>
    <string name="failed_to_set_passcode">Failed to set passcode</string>
    <string name="hidden_directory_created">Hidden Directory created</string>
    <string name="set_language_error">Set Language Error</string>
    <string name="album_created">Album is created</string>
    <string name="album_existed">Album is already existed</string>
    <string name="unable_to_rename_album">Unable to rename album</string>
    <string name="album_renamed">Album name is renamed</string>
    <string name="album_removed">Album is removed</string>
    <string name="unable_to_remove_album">Unable to remove album</string>
    <string name="set_pin_first">Set your PIN first</string>
    <string name="failed_delete_media">Failed to delete media</string>
    <string name="media_deleted_success">Media is deleted successfully</string>
    <string name="lockscreen_set">Lock Screen set</string>
    <string name="lockscreen_not_set">Lock Screen not set</string>
    <string name="homescreen_set">Home Screen set</string>
    <string name="homescreen_not_set">Home Screen not set</string>
    <string name="pick_this_location">Pick this location?</string>
    <string name="delete_media">Delete media</string>
    <string name="choose_a_method">Choose a method</string>
    <string name="create_album">Create album</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="please_input_password">Please input password</string>
    <string name="image_info">Image Information</string>
    <string name="video_info">Video Information</string>
    <string name="failed_to_display_video_info">Failed to display video information</string>
    <string name="share_via">Share via</string>
    <string name="set_as">Set as</string>
    <string name="remove_album">Remove album</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="Error">Error</string>

    <!-- Night mode -->
    <string name="night_mode">Night mode</string>
    <string name="night_mode_activated">Night mode is activated</string>
    <string name="night_mode_deactivated">Night mode is deactivated</string>

    <!-- Preference Titles -->
    <string name="preferences_category_general">General</string>
    <string name="preferences_language">Language</string>

    <!-- NOTE: Has to correspond to array "locales" in locales.xml (elements in same orderwith) -->
    <string-array name="settings_language_values">
        <item>Default (System setting)</item>
        <item>English</item>
        <item>Vietnamese</item>
    </string-array>

</resources>