<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="setting_pref">
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="@string/preferences_category_general">
        <ListPreference
            android:key="pref_key_language"
            android:title="@string/preferences_language"
            android:dialogTitle="@string/preferences_language"
            android:entries="@array/settings_language_values"
            android:entryValues="@array/locales"
            android:defaultValue="@string/system_locale"
            android:summary="%s">
        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="@string/night_mode">

        <CheckBoxPreference
            android:title="@string/night_mode"
            app:key="NIGHT"
            app:summaryOn="@string/night_mode_activated"
            app:summaryOff="@string/night_mode_deactivated"
            app:defaultValue="false"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="vault_passcode_key"
        android:layout="@layout/preferences_category"
        android:title="@string/vault">
        <PreferenceScreen
            android:key="set_pin_key"
            android:title="@string/set_pin"
            android:summary="@string/set_pin_passcode">
        </PreferenceScreen>

        <PreferenceScreen
            android:key="change_pin_key"
            android:title="@string/change_pin"
            android:summary="@string/change_pin_passcode">
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>