<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/take_media_menu"
        android:icon="@drawable/ic_camera"
        android:title="@string/media_capture"
        app:showAsAction="ifRoom" >

        <menu>

            <item
                android:id="@+id/take_media"
                android:title="@string/camera_capture"
                android:icon="@drawable/ic_camera"
                android:iconTint="@color/black"/>

            <item
                android:id="@+id/take_video"
                android:title="@string/camera_video"
                android:icon="@drawable/ic_video"
                android:iconTint="@color/black"/>

        </menu>

    </item>

    <item
        android:id="@+id/view_type"
        android:title="@string/view_type"
        app:showAsAction="never">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/grid"
                    android:checked="true"
                    android:title="@string/grid" />

                <item
                    android:id="@+id/list"
                    android:title="@string/list" />

                <item
                    android:id="@+id/flex"
                    android:title="@string/flex" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/show_dates"
        android:title="@string/show_dates"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
</menu>