<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/deleteVideo"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btnSlideshow"
        android:title="@string/slideshow" />
    <item
        android:id="@+id/btnAddAlbum"
        android:title="@string/add_to_album" />
    <item
        android:id="@+id/btnCopy"
        android:title="@string/copy" />
    <item
        android:id="@+id/btnDelete"
        android:title="@string/delete" />
    <item
        android:id="@+id/btnMoveToVault"
        android:title="@string/move_to_vault" />
    <item
        android:id="@+id/btnShowInfo"
        android:title="@string/information" />
</menu>