<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    tools:context=".view.fragments.BrushFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brush_size" />

        <SeekBar
            android:id="@+id/seekbar_brushSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opacity" />

        <SeekBar
            android:id="@+id/seekbar_brushOpacity"
            android:min="1"
            android:max="100"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/brushColor"
            android:layout_width="match_parent"
            android:layout_height="80dp">

        </androidx.recyclerview.widget.RecyclerView>

        <ToggleButton
            android:id="@+id/brushState"
            android:textOff="@string/brush_state_paint"
            android:textOn="@string/brush_state_eraser"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>