<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.EditImageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            app:theme="@style/ToolBarStyle"
            app:popupTheme="@style/Theme.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ja.burhanrashid52.photoeditor.PhotoEditorView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/scrollViewEdit"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <HorizontalScrollView
        android:id="@+id/scrollViewEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnFilters"
                android:padding="16dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_filter"
                        app:tint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Filters"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:gravity="center_horizontal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnEditImage"
                android:padding="16dp"
                android:layout_marginLeft="6dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="8dp"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_edit"
                        app:tint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edit"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:gravity="center_horizontal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnBrushImage"
                android:padding="16dp"
                android:layout_marginLeft="6dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="8dp"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_brush"
                        app:tint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brush_btn"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:gravity="center_horizontal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnEmoji"
                android:padding="16dp"
                android:layout_marginLeft="6dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="8dp"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_tag_faces"
                        app:tint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_emoji"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:gravity="center_horizontal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnAddTextToImage"
                android:padding="16dp"
                android:layout_marginLeft="6dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="8dp"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_text_fields"
                        app:tint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_for_image"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:gravity="center_horizontal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnCropImage"
                android:padding="16dp"
                android:layout_marginLeft="6dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardElevation="8dp"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_crop"
                        app:tint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crop_image"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:gravity="center_horizontal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>